yaml/min-cluster-allinone/sentinel-dashboard/sentinel-dashboard-service.yaml
metadata:
  name: sentinel-dashboard
  labels:
    app: sentinel-dashboard
  namespace: sentinel
spec:
  selector:
    app: sentinel-dashboard
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
      name: dashboard
    - protocol: TCP
      targetPort: 8719
      port: 8719
      name: api
  type: ClusterIP
  sessionAffinity: ClientIP
apiVersion: v1
kind: Service
